fixes navbar collapse

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,3 @@
-/*h1 {
-  animation-duration: 3s;
-  animation-name: slidein;
-}*/
 
 @font-face {
 	font-family: "oswald stencil";
@@ -20,6 +16,7 @@
 	font-size: 30px;
 	color: white;
 	margin-top: 20px;
+	/*margin-left: 5px;*/
 	-webkit-animation-duration: 1s;
   -webkit-animation-name: slidein;
 }
@@ -47,6 +44,26 @@
 	width: 100%;
 }
 
+#projects {
+	/*margin-top: 700px;*/
+	background: #FF8952; /*40E8A9;*/
+	position: relative;
+	display: block;
+}
+
+#slogan {
+	height: 700px;
+	background: transparent;
+	font-size: 50px;
+	color: white;
+	font-family: 'oswald light', sans-serif;
+	text-align: center;
+	/*padding-right: 100px;*/
+	padding-top: 300px;
+	position: relative;
+	display: block;
+}
+
 #logo {
 	background: url("images/tile.jpg");
 	position: fixed;
@@ -68,33 +85,12 @@
 	font-family: 'oswald stencil', helvetica, serif;
 }
 
-/*.dividerOne {
-	height: 100px;
-	width: 100%;
-	background: #E85B15;
-	position: relative;
-}
 
-.dividerTwo {
-	height: 100px;
-	width: 100%;
-	background: #FF8617;
-	position: relative;
-}*/
+#Static, #Modx, #Wordpress, #About {
 
-/*div {
-	font-family: 'Oxygen', sans-serif;
-}*/
-
-#Static, #Modx, #Wordpress, #Contact, #About {
-
-
-	/*background: white;
-	border: solid 20px #40E8A9;*/
-	background: #40E8A9;
-	/*position: relative;*/
+	background: #FF8952;
 	display: block;
-	height: 500px;
+	height: 300px;
 	width: 100%;
 	vertical-align: middle;
 	font-family: "oswald light", helvetica, serif;
@@ -102,18 +98,28 @@
 	text-align: center;
 }
 
-#projects {
-	margin-top: 700px;
-	background: #40E8A9;
-	position: relative;
+#Contact {
+
+	background: #FF8952;
+	display: block;
+	height: 375px;
+	width: 100%;
+	vertical-align: middle;
+	font-family: "oswald light", helvetica, serif;
+	color: white;
+	text-align: center;
 }
 
-.col-md-6 {
-	padding-right: 5%;
-}
+
+
+/*.spiel {
+	background: #fafafa;
+}*/
+
+
 
 .divLeft {
-	float: right;
+	float: center;
 }
 
 .divRight {
@@ -122,38 +128,44 @@
 	font-size: 20px;
 }
 
-/*#Static > h1, a {
-	color: white;
-	text-align: right;
-	padding-right: 10px;
-}*/
+.projectImg {
+	border-radius: 50px;
+	border-top-left-radius: 50px;
+	-webkit-border-top-left-radius: 50px;
+	-moz-border-top-left-radius: 50px;
+  border-bottom-right-radius: 50px;
+  -webkit-border-bottom-right-radius: 50px;
+  -moz-border-bottom-right-radius: 50px;
+  padding: 5px;
+  border: solid 2px white;
+}
+
+
 .meImg {
-	width: 300px;
-	height: 300px;
-	border-radius: 150px;
-	border-top-left-radius: 150px;
-	-webkit-border-top-left-radius: 150px;
-	-moz-border-top-left-radius: 150px;
-  border-bottom-right-radius: 150px;
-  -webkit-border-bottom-right-radius: 150px;
-  -moz-border-bottom-right-radius: 150px;
+	width: 200px;
+	height: 200px;
+	border-radius: 100px;
+	border-top-left-radius: 100px;
+	-webkit-border-top-left-radius: 100px;
+	-moz-border-top-left-radius: 100px;
+  border-bottom-right-radius: 100px;
+  -webkit-border-bottom-right-radius: 100px;
+  -moz-border-bottom-right-radius: 100px;
 	/*background: url(images/me.jpg) no-repeat;*/
-	position: static;
+	/*position: static;*/
 }
 
 .horseThiefImg {
-	width: 300px;
-	height: 300px;
-	border-radius: 150px;
-	border-top-left-radius: 150px;
-	-webkit-border-top-left-radius: 150px;
-	-moz-border-top-left-radius: 150px;
-  border-bottom-right-radius: 150px;
-  -webkit-border-bottom-right-radius: 150px;
-  -moz-border-bottom-right-radius: 150px;
-	/*background: url(images/me.jpg) no-repeat;*/
-	float: left;
-	display: block;
+	width: 200px;
+	height: 200px;
+	border-radius: 100px;
+	border-top-left-radius: 100px;
+	-webkit-border-top-left-radius: 100px;
+	-moz-border-top-left-radius: 100px;
+  border-bottom-right-radius: 100px;
+  -webkit-border-bottom-right-radius: 100px;
+  -moz-border-bottom-right-radius: 100px;
+	/*float: left;*/
 }
 
 #aboutName {
@@ -192,49 +204,23 @@
 
   to {
     margin-left: 0%;
-    /*-webkit-animation-name: bobForth;
-    -webkit-animation-duration: 2s;*/
   }
 }
 
-/*@-webkit-keyframes bobForth {
-  from {
-    margin-left: 1%;
-  }
-
-  to {
-    margin-left: 10%;
-  }
-}*/
-
-
-hr {
-	color: #FF8617;
+#contactModalLaunch {
+	padding-top: 150px;
+	color: white;
 }
+
 
 #accordion {
 	background-color: white;
 	border: solid 1px;
 }
 
-/*.pillButton  {
-	color: black;
-	border-left: solid black 4px;
-	border-bottom: solid 4px;
-	border-right: solid 1px;
-	border-top: solid 1px;
-	font-size: 30px;
-}
 
-.pillButton:hover {
-	color: black;
-	background-color: white;
-	border: solid 1px;
-	background: white;
-}*/
 .pillButton, .pillButton a {
 	color: white;
-	/*font-size: 30px;*/
 	float: right;
 	padding-right: 5%;
 	font-family: 'Oxygen', sans-serif;
@@ -242,6 +228,10 @@ hr {
 
 a:visited{
 	text-decoration: none;
+}
+
+#mailChimp {
+
 }
 
 .appearForMobile {
@@ -255,7 +245,7 @@ a:visited{
 (-webkit-min-device-pixel-ratio: 1.25), 
 (min-resolution: 120dpi){ 
 	#logo {
-	background: url("images/beach.jpg");
+	background: url("images/tile.jpg");
 	}
 }
 
@@ -264,7 +254,7 @@ a:visited{
 (-webkit-min-device-pixel-ratio: 1.3), 
 (min-resolution: 124.8dpi){ 
   #logo {
-		background: url("images/beach.jpg");
+		background: url("images/tile.jpg");
 	}
 }
 
@@ -273,7 +263,7 @@ a:visited{
 (-webkit-min-device-pixel-ratio: 1.5), 
 (min-resolution: 144dpi){ 
   #logo {
-		background: url("images/beach.jpg");
+		background: url("images/tile.jpg");
 	}
 }
 
@@ -290,5 +280,12 @@ a:visited{
 
 	.appearForMobile {
 		display: block;
+	}
+}
+
+@media (max-width: 770px) {
+
+	#customMenu {
+		padding-left: 5px;
 	}
 }
